Убрал ResponseEntity, добавил  @ResponseStatus